before starting wrapping and headers
