# doc/api.yaml
@@ -5,7 +5,7 @@ info:
     API for the project the course of WASA
   version: 0.0.2
 paths:
-  /session:
+  /login:
     post:
       tags: ["login"]
       summary: Logs in the user
@@ -13,6 +13,7 @@ paths:
         If the user does not exist, it will be created,
         and an identifier is returned.
         If the user exists, the user identifier is returned.
+      security: []
       operationId: doLogin
       requestBody:
         description: User details
@@ -537,3 +538,13 @@ components:
         message:
           description: the message of the error
           type: string
+    
+  securitySchemes:
+    bearerAuthentication:
+      description: |
+        User authentication with the user ID passed
+        as an authentication token.
+        Of course, that is extremely insecure, but it's done
+        according to the project specification.
+      type: http
+      scheme: bearer
